Improved ability to create custom robots and added .gitignore
Instead of using a robot description thats directly in the .wbt file,
the code now imports a .proto file which should make it easier to
eventually get our cad converted.

--- a/slugbot_package/CMakeLists.txt
+++ b/slugbot_package/CMakeLists.txt
@@ -65,6 +65,7 @@ install(DIRECTORY
   launch
   resource
   worlds
+  protos
   DESTINATION share/${PROJECT_NAME}/
 )
 ament_export_include_directories(
