--- a/slugbot_package/package.xml
+++ b/slugbot_package/package.xml
@@ -4,7 +4,7 @@
   <name>slugbot_package</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="arthon.greenspan@modalai.com">arthon</maintainer>
+  <maintainer email="arthongreenspan@gmail.com">arthon</maintainer>
   <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
